--- a/styles/header.css
+++ b/styles/header.css
@@ -49,3 +49,9 @@
     font-size: 14px;
     margin-top: 0.5em;
 }
+
+@media screen and (min-width: 768px) {
+    .statusbar {
+        display: none;
+    }
+}
