--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -52,3 +52,10 @@ footer.rodape{
   opacity: 30%;
   background-image: url('../assets/icones/menuicone.png');
 }
+
+@media screen and (min-width:768px) {
+  .rodape nav>ul {
+    justify-content: center;
+    gap: 2em;
+  }
+}
